--- a/package.json
+++ b/package.json
@@ -5,14 +5,27 @@
   "description": "Your one-in-all solution for synchronizing web documents with your your  reMarkable tablet.",
   "author": "Alberto Hernandez Cerezo",
   "scripts": {
-    "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "build:plasmo": "plasmo build",
+    "build:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.cjs -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.mjs --minify",
+    "dev:plasmo": "plasmo dev",
+    "dev:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.js -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.js --watch",
+    "dev": "npx concurrently --kill-others \"yarn run dev:tailwind\" \"yarn run dev:plasmo\""
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
+    "autoprefixer": "^10.4.21",
     "plasmo": "0.90.5",
+    "postcss": "^8.5.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.1.6",
+    "postcss-scss": "^4.0.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
