--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build:plasmo": "plasmo build",
     "build:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.cjs -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.mjs --minify",
     "dev:plasmo": "plasmo dev",
+    "dev:storybook": "storybook dev -p 6006",
     "dev:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.js -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.js --watch",
-    "dev": "npx concurrently --kill-others \"yarn run dev:tailwind\" \"yarn run dev:plasmo\""
+    "dev": "npx concurrently --kill-others \"yarn run dev:tailwind\" \"yarn run dev:plasmo\" \"yarn run dev:storybook\"",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.7",
@@ -29,11 +32,16 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@storybook/addon-docs": "^9.0.14",
+    "@storybook/addon-onboarding": "^9.0.14",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react-webpack5": "^9.0.14",
     "@types/chrome": "0.0.258",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "prettier": "3.2.4",
+    "storybook": "^9.0.14",
     "typescript": "5.3.3"
   },
   "manifest": {
