chore: update gitignore to discard CSS file compiled by TailwindCSS

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ build
 node_modules
 
 # TailwindCSS stylesheet - Compiled via JIT during project build (so no need to add it to the repo)
-./assets/style.css
+assets/style.css
 
 # Storybook specific files to be ignored
 *storybook.log
