--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "prettier": "3.2.4",
+    "standard": "^17.1.2",
     "storybook": "^9.0.14",
     "typescript": "5.3.3"
   },
