--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,4 @@ jobs:
         run: yarn install --pure-lockfile
 
       - name: Run Standard linter
-        run: standard
+        run: yarn dev:lint
