--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "package": "plasmo package",
     "build:plasmo": "plasmo build",
     "build:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.cjs -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.mjs --minify",
+    "dev:standard": "standard",
+    "dev:lint": "yarn dev:standard",
     "dev:plasmo": "plasmo dev",
     "dev:storybook": "storybook dev -p 6006",
     "dev:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.js -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.js --watch",
@@ -41,6 +43,7 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "prettier": "3.6.2",
+    "standard": "^17.1.2",
     "storybook": "^9.0.14",
     "typescript": "5.8.3"
   },
