--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev:tailwind": "npx @tailwindcss/cli --postcss ./config/postcss.config.js -i ./assets/css/tailwind.css -o ./assets/css/style.css -c ./config/tailwind.config.js --watch",
     "dev": "npx concurrently --kill-others \"yarn run dev:tailwind\" \"yarn run dev:plasmo\" \"yarn run dev:storybook\"",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --config=test/jest.config.js"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -42,6 +43,7 @@
     "@types/node": "24.0.7",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "jest": "^30.0.4",
     "prettier": "3.6.2",
     "standard": "^17.1.2",
     "storybook": "^9.0.14",
