--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,26 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
+  test:
+    environment: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '23.11.0'
+          cache: 'yarn'
+
+      - name: Install Dependencies
+        run: yarn install --pure-lockfile
+
+      - name: Run Jest tests and generate coverage report
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          test-script: yarn test --coverage
   lint:
     environment: test
     runs-on: ubuntu-latest
