--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
+    "@pollyjs/core": "^6.0.6",
+    "@pollyjs/persister-fs": "^6.0.6",
+    "@pollyjs/adapter-node-http": "^6.0.6",
     "@storybook/addon-docs": "^9.0.14",
     "@storybook/addon-onboarding": "^9.0.14",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
