--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-dom": "19.1.0",
     "tailwindcss": "^4.1.7"
   },
-  "devDependencies":
+  "devDependencies": {
     "@pollyjs/core": "^6.0.6",
     "@pollyjs/persister-fs": "^6.0.6",
     "@pollyjs/adapter-node-http": "^6.0.6",
