--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "jwt-decode": "^4.0.0",
     "plasmo": "0.90.5",
     "postcss": "^8.5.3",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -35,10 +36,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.5.1",
+    "@pollyjs/adapter-node-http": "^6.0.6",
     "@pollyjs/core": "^6.0.6",
     "@pollyjs/persister-fs": "^6.0.6",
-    "@pollyjs/adapter-node-http": "^6.0.6",
-    "@ianvs/prettier-plugin-sort-imports": "4.5.1",
     "@storybook/addon-docs": "^9.0.14",
     "@storybook/addon-onboarding": "^9.0.14",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
@@ -47,7 +48,9 @@
     "@types/node": "24.0.13",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "dotenv": "^17.2.0",
     "jest": "^30.0.4",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "3.6.2",
     "standard": "^17.1.2",
     "storybook": "^9.0.15",
