--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@ianvs/prettier-plugin-sort-imports": "4.5.1",
     "@pollyjs/adapter-fetch": "^6.0.7",
     "@pollyjs/adapter-node-http": "^6.0.6",
@@ -50,6 +51,11 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "dotenv": "^17.2.0",
+    "eslint": ">=9.25.0",
+    "eslint-config-xo": "^0.47.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "jest": "^30.0.4",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "3.6.2",
