--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "base64-js": "^1.5.1",
+    "crc-32": "^1.2.2",
     "jwt-decode": "^4.0.0",
     "plasmo": "0.90.5",
     "postcss": "^8.5.3",
