--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "@ianvs/prettier-plugin-sort-imports": "4.5.1",
+    "@jest/globals": "^30.0.5",
     "@pollyjs/adapter-fetch": "^6.0.7",
     "@pollyjs/adapter-node-http": "^6.0.6",
     "@pollyjs/core": "^6.0.6",
