--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@clack/core": "^0.5.0",
+    "@clack/prompts": "^0.11.0",
     "@eslint/js": "^9.31.0",
     "@ianvs/prettier-plugin-sort-imports": "4.5.1",
     "@jest/globals": "^30.0.5",
@@ -54,6 +56,7 @@
     "@types/node": "24.0.13",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "commander": "^14.0.0",
     "dotenv": "^17.2.0",
     "eslint": ">=9.25.0",
     "eslint-config-xo": "^0.47.0",
