--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jest": "^30.0.4",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "3.6.2",
+    "shelljs": "^0.10.0",
     "standard": "^17.1.2",
     "storybook": "^9.0.15",
     "typescript": "5.8.3"
