chore: update CI to use environment variables for device tokens.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
 
       - name: Run Jest tests and generate coverage report
         run: yarn test --coverage
+        env:
+          REMARKABLE_DEVICE_TOKEN: ${{ secrets.REMARKABLE_DEVICE_TOKEN }}
+          REMARKABLE_SESSION_TOKEN: ${{ secrets.REMARKABLE_SESSION_TOKEN }}
   lint:
     environment: test
     runs-on: ubuntu-latest
