--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "shelljs": "^0.10.0",
     "standard": "^17.1.2",
     "storybook": "^9.1.3",
+    "tailwind-config-viewer": "^2.0.4",
     "typescript": "5.9.2"
   },
   "manifest": {
