--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest --config=test/jest.config.js --verbose"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@polkadot/x-textencoder": "^13.5.3",
     "@tailwindcss/postcss": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "base64-js": "^1.5.1",
+    "classnames": "^2.5.1",
     "crc-32": "^1.2.2",
     "jwt-decode": "^4.0.0",
     "plasmo": "0.90.5",
